<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sigue los colores</string>
    <string name="erno" translatable="false">Ernesto Julio Pérez Valdés</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="record">Récord: %d</string>
    <string name="score">Puntos: %d</string>
    <string name="start">Comenzar</string>
    <string name="settings">Ajustes</string>
    <string name="help">Ayuda</string>
    <string name="how_to_play">¿Cómo jugar?</string>
    <string name="statistics">Estadísticas</string>
    <string name="share_with_friends">Compartir con amigos</string>
    <string name="rate_and_comment">Valora y comenta</string>
    <string name="play">Jugar</string>
    <string name="generating" tools:ignore="TypographyEllipsis">Generando...</string>
    <string name="go_ahead">Adelante</string>
    <string name="next">Siguiente</string>
    <string name="changing">Cambiando</string>
    <string name="lose">Has perdido</string>
    <string name="new_record">Nuevo récord</string>
    <string name="play_again">Jugar de nuevo</string>
    <string name="return_to_title">Volver al inicio</string>
    <string name="game_over">Has perdido</string>
    <string name="about" tools:ignore="TypographyEllipsis">Acerca de...</string>
    <string name="developer">Programación</string>
    <string name="designer">Diseño</string>
    <string name="sound">Sonido</string>
    <string name="version">versión %s</string>
    <string name="tutorial_step_1">Presiona el botón JUGAR para entrar al juego</string>
    <string name="tutorial_step_2">Presiona el botón COMENZAR para empezar el juego</string>
    <string name="tutorial_step_3">Memoriza el patrón de colores generado</string>
    <string name="tutorial_step_4">Toca los colores en el orden que fueron mostrados</string>
    <string name="tutorial_step_5">Sigue jugando, trata de obtener la mayor puntuación y diviértete</string>
    <string name="tutorial_step_6">Si pierdes, no te rindas, sigue intentando romper tu mayor puntuación, buena suerte</string>
    <string name="level_up">Dificultad Aumentada</string>
    <string name="share_text">Entra, descarga y diviértete un rato con este divertido juego\n\nhttps://www.apklis.cu/application/cu.erno.followthecolors</string>
</resources>