<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        tools:context=".ui.dialog.AboutDialog">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="?attr/dark"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/how_to_play"
            android:textColor="?attr/dark"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="?attr/dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_16sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/tutorial_circular_image"
                    android:layout_height="@dimen/tutorial_circular_image"
                    android:src="@drawable/primary_circle"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/one"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tutorial_circular_image_text"
                    android:textStyle="bold" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_step_1"
                android:textColor="?attr/dark"
                android:textSize="@dimen/tutorial_circular_text"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/button_padding"
            android:text="@string/play"
            android:textSize="@dimen/button_text"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_16sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/tutorial_circular_image"
                    android:layout_height="@dimen/tutorial_circular_image"
                    android:src="@drawable/primary_circle"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/two"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tutorial_circular_image_text"
                    android:textStyle="bold" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_step_2"
                android:textColor="?attr/dark"
                android:textSize="@dimen/tutorial_circular_text"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/button_padding"
            android:text="@string/start"
            android:textSize="@dimen/button_text"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_16sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/tutorial_circular_image"
                    android:layout_height="@dimen/tutorial_circular_image"
                    android:src="@drawable/primary_circle"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/three"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tutorial_circular_image_text"
                    android:textStyle="bold" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_step_3"
                android:textColor="?attr/dark"
                android:textSize="@dimen/tutorial_circular_text"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:paddingVertical="@dimen/button_padding"
            android:text="@string/generating"
            android:textSize="@dimen/button_text"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_16sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/tutorial_circular_image"
                    android:layout_height="@dimen/tutorial_circular_image"
                    android:src="@drawable/primary_circle"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/four"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tutorial_circular_image_text"
                    android:textStyle="bold" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_step_4"
                android:textColor="?attr/dark"
                android:textSize="@dimen/tutorial_circular_text"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:paddingVertical="@dimen/button_padding"
            android:text="@string/go_ahead"
            android:textSize="@dimen/button_text"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_16sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/tutorial_circular_image"
                    android:layout_height="@dimen/tutorial_circular_image"
                    android:src="@drawable/primary_circle"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/five"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tutorial_circular_image_text"
                    android:textStyle="bold" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_step_5"
                android:textColor="?attr/dark"
                android:textSize="@dimen/tutorial_circular_text"
                android:textStyle="bold" />

        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/button_padding"
            android:text="@string/next"
            android:textSize="@dimen/button_text"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_16sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/tutorial_circular_image"
                    android:layout_height="@dimen/tutorial_circular_image"
                    android:src="@drawable/primary_circle"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/six"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tutorial_circular_image_text"
                    android:textStyle="bold" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_step_6"
                android:textColor="?attr/dark"
                android:textSize="@dimen/tutorial_circular_text"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_5sdp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/home_icon_size"
                android:layout_height="@dimen/home_icon_size"
                android:layout_marginEnd="@dimen/_5sdp"
                app:srcCompat="@drawable/ic_reset"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_again"
                android:textColor="@color/color_reset"
                android:textSize="@dimen/regular_text_size"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>


