<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="?attr/dark"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/txt_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:textColor="?attr/dark"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/layoutButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_record"
        tools:viewBindingIgnore="true">

        <LinearLayout
            android:id="@+id/layoutHowToPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/home_icon_size"
                android:layout_height="@dimen/home_icon_size"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_help"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play"
                android:textColor="@color/color_help"
                android:textSize="@dimen/regular_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutStatistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            tools:ignore="UseCompoundDrawables"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/home_icon_size"
                android:layout_height="@dimen/home_icon_size"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_statistic"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistics"
                android:textColor="@color/color_statistics"
                android:textSize="@dimen/regular_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            tools:ignore="UseCompoundDrawables"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/home_icon_size"
                android:layout_height="@dimen/home_icon_size"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_share"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_with_friends"
                android:textColor="@color/color_share"
                android:textSize="@dimen/regular_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            tools:ignore="UseCompoundDrawables"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/home_icon_size"
                android:layout_height="@dimen/home_icon_size"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_star_rate"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_and_comment"
                android:textColor="@color/color_rate"
                android:textSize="@dimen/regular_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            tools:ignore="UseCompoundDrawables"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/home_icon_size"
                android:layout_height="@dimen/home_icon_size"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_info"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/color_info"
                android:textSize="@dimen/regular_text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:text="@string/play"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/txt_title"
        app:layout_constraintStart_toStartOf="@id/txt_title"
        app:layout_constraintTop_toBottomOf="@id/layoutButtons" />

</androidx.constraintlayout.widget.ConstraintLayout>
