<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.dialog.GameOverDialog">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textColor="?attr/dark"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="?attr/dark"
        android:textSize="@dimen/_24sdp"
        android:layout_marginVertical="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgCrown"
        android:layout_width="@dimen/_64sdp"
        android:layout_height="@dimen/_64sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_13sdp"
        app:srcCompat="@drawable/ic_win"
        android:visibility="gone"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_record">

        <LinearLayout
            android:id="@+id/layout_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/home_icon_size"
                android:layout_height="@dimen/home_icon_size"
                android:layout_marginEnd="@dimen/_5sdp"
                app:srcCompat="@drawable/ic_home"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_to_title"
                android:textColor="@color/color_home"
                android:textSize="@dimen/regular_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_5sdp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/home_icon_size"
                android:layout_height="@dimen/home_icon_size"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_reset"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_again"
                android:textColor="@color/color_reset"
                android:textSize="@dimen/regular_text_size"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>